ChangeLog for the Astro project.

20200102:
	* add Horizon class and sample horizon file
	* added the astrohorizon program
	* make TwoAngles class comparable so it can be used in a set

20191227:
	* add dew heater stuff to Cooler class
	* add dew heater to ASI driver and Simulator

20191226:
	* add operator*() to the YUV<P> template
	* ensure that a failure to get mount data does not invalidate an
	  exposure in the task queue
	* add proper handling of gain in AsiCcd class
	* change default gain value to -1, which means that the current
	  gain of the camera should be used
	* fix set temperature bug in AsiCooler class
	* make task wait times configurable
	* make cooler stable limit configurable

20191225:
	* add temperature class, unify absolute zero value
	* add temperature retrieval to ASI Ccd class
	* add Temperature metadata to Ccd class
	* add Gain retrieval to ASI Ccd class
	* increase temperature stable interval from +-1 degree to +-3 degrees

20191224:
	* add restart command in snowdaemon client
	* improve systemd service file
	* add wait option to snowstar

20190914:
	* make MilkyWay debugging less verbose

20190911:
	* fix const in AzmAltConverter class

20190910:
	* fix off-by-1 error in ConstellationCatalog.cpp

20190909:
	* add ConstellationCatalog to catalog library
	* add normalization to Point class

20190908:
	* add start script for virtual frame buffer
	* add gateway PHP scripts
	* only call default MilkyWay constructor once

20190903:
	* add -Wno-psabi option to silence GCC 7.1
	* portability fixes for Raspbian/Debian 10
	* fix ASI detection

20190901:
	* fix bug that prevented calculated from being saved
	* add callback for deleted tasks
	* add long exposure time to Atik cameras that only support short
	  exposures
	* add add() method to Image template
	* fix wrong column name in taskqueue table

20190823:
	* fix ifstream.fail missing in catalogs
	* fix bug that PGC data file open was not checked