@@ -1,5 +1,8 @@
 ChangeLog for the Qt GUI to Astrophotography
 
+20200102:
+	* add Horizon to SkyDrawing and SkyDisplayWidget classes
+
 20191227:
 	* add dew heater stuff
 
